--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pramod265.github.io/react-news-app/",
   "name": "react_news_app",
   "version": "0.1.0",
   "private": true,
